--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,34 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.header{
+  background-color: bisque;
+  width: 100%;
+  padding: 10px 32px;
+  box-shadow: 0px 2px 2px solid black;
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-sizing: border-box;
+}
+
+.Toolbar{
+  margin: 0 10px;
+}
+
+.Toolbar ul{
+  display: flex;
+  list-style: none;
+}
+
+.Toolbar ul li{
+  font-size: larger;
+  font-weight: 700;
+  padding: 5px;
+  align-items: center;
+
+}
+
+
