--- a/src/index.css
+++ b/src/index.css
@@ -13,32 +13,99 @@ code {
 }
 
 .header{
-  background-color: bisque;
+  background-color: rgb(255, 140, 0);
   width: 100%;
   padding: 10px 32px;
-  box-shadow: 0px 2px 2px solid black;
-  height: 60px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  box-shadow: 0px 2px 2px  black;
+  height: 80px;
   box-sizing: border-box;
 }
 
-.Toolbar{
-  margin: 0 10px;
+.header h1{
+  text-align: center;
+  color: black;
+  margin: 5px auto;
 }
 
-.Toolbar ul{
-  display: flex;
-  list-style: none;
+.Main{
+  margin-top: 20px;
 }
 
-.Toolbar ul li{
+.Container{
+  width: 60%;
+  background-color: bisque;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.705);
+  border-radius: 5px;
+  padding: 10px 5px;
+  margin: 10px auto;
+}
+
+.Container h3{
+  text-align: center;
+  font-size: larger;
+  font-weight: 600;
+  color: rgb(255, 140, 0);
+  text-decoration: underline;
+}
+
+.TodoForm{
+  margin: 10px 20px;
+  text-align: center;
+}
+
+.TodoForm input{
+  width: 100%;
+  padding: 15px 0;
+  text-align: center;
+  outline: none;
+  font-size: 1em;
+  border: none;
+}
+
+.TodoForm input:focus{
+  box-shadow: 0px 1px 5px rgb(255, 140, 0);
+}
+
+.TodoForm button{
+  background: rgb(255, 140, 0);
+  color: black;
   font-size: larger;
   font-weight: 700;
-  padding: 5px;
-  align-items: center;
-
+  border: none;
+  border-radius: 5px;
+  width: 50%;
+  margin: 20px auto;
+  padding: 10px 0;
+  cursor: pointer;
 }
 
+.Footer{
+  background-color: bisque;
+  width: 100%;
+  padding: 10px 32px;
+  box-shadow: 0px 2px 2px  black;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+.Footer div{
+  display: flex;
+  margin: 0 auto;
+}
+
+.Footer div p{
+ 
+  color: black;
+  font-size: larger;
+  text-align: center;
+}
+
+
+@media (max-width: 500px){
+  .Container{
+    width: 80%;
+  }
+}
 
