--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,38 @@ code {
   cursor: pointer;
 }
 
+.TodoListing{
+  margin-top: 30px;
+  width: 100%;
+  font-size: 20px;
+}
+
+.Todo{
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 0;
+  color: black;
+  background-color: rgba(255, 140, 0, 0.5);
+}
+
+.Todo p{
+  margin: 10px;
+  overflow:hidden;
+}
+
+.Todo button{
+  background-color:transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  margin: 10px;
+}
+
+.Todo button i{
+  font-size: 20px;
+  color: red;
+}
+
 .Footer{
   background-color: bisque;
   width: 100%;
